# redirect-service

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py  redirect_logic.py
app/routers/: health_check.py  redirect.py
tests/: conftest.py  test_redirect_logic.py
