[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Name <name@domain.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

